# leanshot

./: .dockerignore  .drone.yml  .gdb_history  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.check  LICENSE  README.md
ci/: build-release.sh  check.sh  package  run.sh
contrib/: leanshot-hashed.sh
imlib2/: Cargo.toml  errors.rs  image.rs  lib.rs  visual.rs
imlib2-sys/: lib.rs
imlib2/imlib2-sys/: Cargo.toml  build.rs  wrapper.h
imlib2/src/: image.rs  lib.rs
slop-sys/: Cargo.toml  build.rs  lib.rs
src/: build.rs  capture.rs  errors.rs  gui.rs  image.rs  lib.rs  main.rs  options.rs  selection.rs  window.rs
src/imlib2/: image.rs  mod.rs
src/xlib/: cursor.rs  cursorfont.rs  display.rs  drawable.rs  errors.rs  event.rs  gc.rs  image.rs  mod.rs  visual.rs  window.rs
xlib/: Cargo.toml
xlib/src/: atom.rs  display.rs  drawable.rs  error.rs  event.rs  image.rs  lib.rs  rect.rs  visual.rs  window.rs
