[package]
name = "leanshot"
description = "Screenshot capture for Linux."
version = "0.3.0"
repository = "https://github.com/iptq/leanshot"
license-file = "LICENSE"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[workspace]
members = [".", "imlib2", "imlib2/imlib2-sys", "xlib"]

[dependencies]
failure = "0.1"
gl = "0.10"
glutin = "0.18"
imlib2 = { version = "0.1", path = "./imlib2" }
nanovg = { version = "1.0.2", features = ["gl3"] }
png = "0.12"
structopt = "0.2"
time = "0.1"
xlib = { version = "0.1", path = "./xlib" }
